ansible/k8s/roles/deploy-app/files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend-app
        image: httpd:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: backend-app
        image: moiferrsan/php7-info:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: frontend-app
spec:
  ports:
  - port: 80
  selector:
    app: frontend-app
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: backend-app
spec:
  ports:
  - port: 80
  selector:
    app: backend-app
