ansible/k8s/roles/deploy-app/files/ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
  - host: dns_alb
    http:
      paths:
      - path: /frontend
        backend:
          serviceName: frontend-svc
          servicePort: 80
      - path: /backend
        backend:
          serviceName: backend-svc
          servicePort: 80
